--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "batatas": "echo \"Error: no test specified\" && exit 1"
+    "batatas": "echo \"Error: no test specified\" && exit 1",
+    "scss": "sass --watch styles/scss/index.scss styles/css/styles.css"
   },
   "author": "",
   "license": "ISC",
